Name: ghb
Version: 0.1

Synopsis: command line github tools, implemented in haskell
Description:
  command line github
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Web
License:             MIT
License-file:        LICENSE
Cabal-Version: >= 1.4
Executable ghb
  Hs-Source-Dirs: .
  main-is: Main.hs

  Build-Depends: 
    base,
    mtl,
    transformers >= 0.3.0.0,
    curl >= 1.3.7,
    text >= 0.11.2.0,
    aeson >= 0.3.2.6,
    -- aeson-pretty >= 0.7,
    json >= 0.4.3,
    bytestring >= 0.9.2.1,
    -- hoauth2,  
    -- hoauth doesn't install properly
    cmdargs

