Name: ghb
Version: 0.1

Synopsis: command line github tools, implemented in haskell
Description:
  command line github
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Web
License:             MIT
License-file:        LICENSE
Cabal-version: >= 1.10

Executable ghb
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  Build-Depends: 
    base,
    mtl,
    transformers >= 0.3.0.0,
    curl >= 1.3.7,
    text >= 0.11.2.0,
    aeson >= 0.3.2.6,
    -- aeson-pretty >= 0.7,
    json >= 0.4.3,
    bytestring >= 0.9.2.1,
    vector,
    time,
    hoauth2,  
    -- hoauth doesn't install properly
    cmdargs


Executable glens
  Hs-Source-Dirs: src
  main-is: Lens.hs
  default-language: Haskell2010

  Build-Depends: 
    base,
    text ,
    aeson ,
    lens >= 4.0,
    bytestring

Executable gjoin
  Hs-Source-Dirs: src
  main-is: Join.hs
  default-language: Haskell2010
  Build-Depends: 
    base,
    text ,
    aeson ,
    unordered-containers,
    lens >= 4.0,
    bytestring

