Name: ghb
Version: 0.1

Synopsis: command line github tools, implemented in haskell
Description:
  command line github
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Web
License:             MIT
License-file:        LICENSE
Cabal-version: >= 1.10

Executable ghb
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010

  Build-Depends: 
    base,
    mtl,
    transformers >= 0.3.0.0,
    text >= 0.11.2.0,
    aeson >= 0.3.2.6,
    json >= 0.4.3,
    bytestring >= 0.9.2.1,
    vector,
    time,
    cmdargs,
    optparse-applicative

